Freedom Sanbox Ant Deploy/src/objects/Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <formula>Test__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Critical_Notes__c</fullName>
        <label>Critical Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Holder_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Holder Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Action Plan</relationshipLabel>
        <relationshipName>Action_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund_House_AMC__c</fullName>
        <label>Fund House (AMC)</label>
        <picklist>
            <picklistValues>
                <fullName>Axis Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharti AXA Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla Sun Life Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fidelity Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin Templeton Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Prudential Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDFC Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP Morgan Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kotak Mahindra Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIC Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliance Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sundaram BNP Paribas Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tata Mutual Fund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investment_Amount__c</fullName>
        <label>Investment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mode_of_Holding__c</fullName>
        <label>Mode of Holding</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either or Survivor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <label>Scheme Name</label>
        <picklist>
            <controllingField>Fund_House_AMC__c</controllingField>
            <picklistValues>
                <fullName>Axis - Equity Fund (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharti AXA - Equity Fund Reg (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharti AXA - Treasury Adv Ret (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - DBF Ret (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - Frontline Equity Fund Plan A (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - LT Adv Fund (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - Mid Cap Fund Plan A (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - Savings Fund Ret (D) (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - Savings Fund Ret (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - Equity Fund Reg (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - FRF (D) (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - Oppo Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - STF (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - Tax Saver Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - Top 100 Equity Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fidelity - Equity Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin - India Oppt Fund (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin - India Prima Plus (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin - India Smaller Companies Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT - Capital Safety Fund 3 (Y) Plan (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Cash Mgmt Treasury Advantage Plan (D) (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Cash Mgmt Treasury Advantage Plan (W) (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Equity Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - High Interest (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - High Interest STP (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Liquid Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - STP (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Tax Saver  - (D) (z)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Top 200 Fund - (G) (z)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Pru - Dynamic Plan (D)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheme_Option__c</fullName>
        <label>Scheme Option</label>
        <picklist>
            <picklistValues>
                <fullName>Dividend Payout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment - Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment - Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment - Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment - Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheme_Sub_Type__c</fullName>
        <label>Scheme Sub Type</label>
        <picklist>
            <controllingField>Scheme_Type__c</controllingField>
            <picklistValues>
                <fullName>Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thematic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sectoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELSS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheme_Type__c</fullName>
        <label>Scheme Type</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Resident Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FII&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club/Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor through guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI-NRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI-NRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank &amp; FI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>test</relationshipLabel>
        <relationshipName>Action_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferee_Scheme_Name_STP__c</fullName>
        <label>Transferee Scheme Name (STP)</label>
        <picklist>
            <controllingField>Fund_House_AMC__c</controllingField>
            <picklistValues>
                <fullName>Axis - Equity Fund (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharti AXA - Equity Fund Reg (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharti AXA - Treasury Adv Ret (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - DBF Ret (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - Frontline Equity Fund Plan A (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - LT Adv Fund (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - Mid Cap Fund Plan A (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - Savings Fund Ret (D) (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla SL - Savings Fund Ret (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - Equity Fund Reg (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - FRF (D) (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - Oppo Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - STF (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - Tax Saver Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP BlackRock - Top 100 Equity Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fidelity - Equity Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin - India Oppt Fund (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin - India Prima Plus (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin - India Smaller Companies Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT - Capital Safety Fund 3 (Y) Plan (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Cash Mgmt Treasury Advantage Plan (D) (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Cash Mgmt Treasury Advantage Plan (W) (D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Equity Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - High Interest (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - High Interest STP (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Liquid Fund (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - STP (G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Tax Saver  - (D) (z)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC - Top 200 Fund - (G) (z)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Pru - Dynamic Plan (D)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transferee_Scheme_Option_STP__c</fullName>
        <label>Transferee Scheme Option (STP)</label>
        <picklist>
            <picklistValues>
                <fullName>Dividend Payout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment - Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment - Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment - Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment - Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transferee_Scheme_Type_STP__c</fullName>
        <label>Transferee Scheme Type (STP)</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transferree_Scheme_SubType_STP__c</fullName>
        <label>Transferree Scheme SubType (STP)</label>
        <picklist>
            <controllingField>Transferee_Scheme_Type_STP__c</controllingField>
            <picklistValues>
                <fullName>Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thematic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sectoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELSS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Investment__c</fullName>
        <label>Type of Investment</label>
        <picklist>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Plan</label>
    <nameField>
        <label>Action Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>